--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ ul{
     list-style: none;
 }
 .main-container{
-    
+    height: 100vh;
     display: flex;
     box-sizing: border-box;
     flex-direction: column;
@@ -111,7 +111,7 @@ ul{
 header{
     flex-shrink: 1;
     flex-grow: 1;
-    flex-basis: calc(25% - 1vw);
+    flex-basis: 18%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -122,11 +122,11 @@ header{
     
 }
 h1{
-    font-size: 2vw;
+    font-size: 11vw;
     color: antiquewhite;
 }
 .instructions{
-    font-size: 1.2vw;
+    font-size: 3vw;
     width: auto;
     margin: 0 5%;
     text-align: justify;
@@ -134,14 +134,14 @@ h1{
 }
 button{
     text-align: center;
-    width: 10vw;
-    height: 3vw;
+    width: 20vw;
+    height: 6vw;
     border-radius: 1.5vw ;
     cursor: pointer;
     color: black;
     background-color: whitesmoke;
     transition: 0.5s;
-    font-size: 1vw;
+    font-size: 3vw;
     transition: display 0.6s ease-in-out;
 }
 #reset{
@@ -158,7 +158,7 @@ button:hover{
 main{
     flex-shrink: 1;
     flex-grow: 1;
-    flex-basis: calc(75% - 0.5vw);
+    flex-basis: 82%;
         
     background-color: rgb(10, 10, 10);
    
@@ -180,7 +180,7 @@ li{
 }
 
 img{
-    height: 4vw;
+    height: 8vw;
     transition: opacity 0.6s ease-in-out;
 }
 }
