--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,8 @@ ul{
     display: flex;
     box-sizing: border-box;
     flex-direction: column;
+    justify-content: center;
+    
     
 }
 header{
