--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ ul{
     height: 100vh;
     display: flex;
     box-sizing: border-box;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     
     
